--- a/templates/base.html
+++ b/templates/base.html
@@ -116,14 +116,11 @@
 									<div class="row">
 										<ul class="icons 6u">
 											<li class="icon icon-home">
-											    宏城鑫泰大厦11楼<br />
-												朝阳区, 北京, 中国<br />
+											    北京, 中国<br />
 											</li>
-											<li class="icon icon-phone">
-												(86) 18600432852
-											</li>
+
 											<li class="icon icon-envelope">
-												lingnck@gmail.com
+												lingnck@163.com
 											</li>
 										</ul>
 										<ul class="icons 6u">
@@ -139,9 +136,6 @@
 <!-- 											<li class="icon icon-facebook">
 												<a href="https://www.facebook.com/madre.ma.1">facebook.com/madre.ma</a>
 											</li> -->
-											<li class="icon icon-google-plus">
-												<a href="https://plus.google.com/u/0/100618357676115881170">google+/madre</a>
-											</li>
 										</ul>
 									</div>
 								</section>
@@ -152,8 +146,8 @@
 				<!-- Copyright -->
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; madre. All rights reserved</li>
-							<li>Design: <a href="http://brief.sinaapp.com/">madre</a></li>
+							<li>&copy; Devin Mah. All rights reserved</li>
+							<li>Design: Devin Mah</li>
 						</ul>
 					</div>
 
